// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickupMainContactEditFormVanilla component should renders correctly when data are present 1`] = `
<View>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs28"
      fontWeight="regular"
      margin={null}
      numberOfLines={null}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        fontSize="fs12"
        href="#"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        target="_blank"
        text=""
        underline={true}
        visible={false}
      />
    </Styled(View)>
  </Styled(View)>
  <ModalNative
    fontSize="fs12"
    fullWidth={true}
    headerStyle={
      Object {
        "left": -50,
        "position": "absolute",
        "top": -2,
      }
    }
    headingAlign="center"
    headingFontWeight="semibold"
    horizontalBar={false}
    iconType="arrow"
    inheritedStyles=""
    isOpen={true}
    isOverlay={false}
    onRequestClose={[MockFunction]}
  >
    <Styled(View)>
      <Styled(ContactFormFields)
        className="pick-up-input toggle"
        labels={Object {}}
        showEmailAddress={false}
        showPhoneNumber={true}
      />
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color="white"
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={null}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        text=""
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </ModalNative>
</View>
`;

exports[`PickupMainContactEditFormVanilla component should renders correctly when data not present 1`] = `
<View>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs28"
      fontWeight="regular"
      margin={null}
      numberOfLines={null}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        fontSize="fs12"
        href="#"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        target="_blank"
        text=""
        underline={true}
        visible={false}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(PickUpContactDisplay)
    formData={Object {}}
  />
</View>
`;

exports[`PickupMainContactEditFormVanilla component should renders on click 1`] = `
<View>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs28"
      fontWeight="regular"
      margin={null}
      numberOfLines={null}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        fontSize="fs12"
        href="#"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        target="_blank"
        text=""
        underline={true}
        visible={false}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(PickUpContactDisplay)
    formData={Object {}}
  />
</View>
`;
